{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 303,
  "lineage": "490ec603-355d-829f-9b29-8b500d0d21df",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05e86b3611c60b0b4",
            "arn": "arn:aws:ec2:us-east-1:762595429056:instance/i-0e851b3c1e378c626",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "demo-project-ec2-profile",
            "id": "i-0e851b3c1e378c626",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-01258e2bf31e8eaea"
              }
            ],
            "primary_network_interface_id": "eni-01258e2bf31e8eaea",
            "private_dns": "ip-172-16-1-195.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.195",
            "public_dns": "ec2-3-81-234-138.compute-1.amazonaws.com",
            "public_ip": "3.81.234.138",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:762595429056:key/c27eef24-e913-4286-926b-6532a922452b",
                "throughput": 125,
                "volume_id": "vol-0fde5c49e92654869",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-025140180b7246afc",
            "tags": {
              "Name": "demo-project-backend"
            },
            "tags_all": {
              "Name": "demo-project-backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ba1461912bc53568"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "i-0e851b3c1e378c626",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_dynamodb_table.chat_sessions",
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.alb_sg",
            "aws_security_group.backend_sg",
            "aws_security_group.frontend_sg",
            "aws_subnet.public_subnet_01",
            "aws_vpc.demo_main_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05e86b3611c60b0b4",
            "arn": "arn:aws:ec2:us-east-1:762595429056:instance/i-0bddff5873a19eee2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "demo-project-ec2-profile",
            "id": "i-0bddff5873a19eee2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0032bb63c863155ad"
              }
            ],
            "primary_network_interface_id": "eni-0032bb63c863155ad",
            "private_dns": "ip-172-16-1-209.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.209",
            "public_dns": "ec2-54-242-164-40.compute-1.amazonaws.com",
            "public_ip": "54.242.164.40",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:762595429056:key/c27eef24-e913-4286-926b-6532a922452b",
                "throughput": 125,
                "volume_id": "vol-0a76db2105d09c91c",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-025140180b7246afc",
            "tags": {
              "Name": "demo-project-frontend"
            },
            "tags_all": {
              "Name": "demo-project-frontend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-058abf85fad4a78d5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "i-0bddff5873a19eee2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_dynamodb_table.chat_sessions",
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.backend",
            "aws_security_group.alb_sg",
            "aws_security_group.backend_sg",
            "aws_security_group.frontend_sg",
            "aws_subnet.public_subnet_01",
            "aws_vpc.demo_main_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:internet-gateway/igw-0664ea257ac441f6b",
            "id": "igw-0664ea257ac441f6b",
            "owner_id": "762595429056",
            "region": "us-east-1",
            "tags": {
              "Name": "demo-project-igw"
            },
            "tags_all": {
              "Name": "demo-project-igw"
            },
            "vpc_id": "vpc-09ef0fa3f183d5b02"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:762595429056:loadbalancer/app/demo-project-alb/a199f0fdb13fe4db",
            "arn_suffix": "app/demo-project-alb/a199f0fdb13fe4db",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "demo-project-alb-1283322054.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:762595429056:loadbalancer/app/demo-project-alb/a199f0fdb13fe4db",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "demo-project-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-08de2302d961ad577"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-025140180b7246afc"
              },
              {
                "subnet_id": "subnet-0776484135e5eb1bb"
              }
            ],
            "subnets": [
              "subnet-025140180b7246afc",
              "subnet-0776484135e5eb1bb"
            ],
            "tags": {
              "Name": "demo-project-alb"
            },
            "tags_all": {
              "Name": "demo-project-alb"
            },
            "vpc_id": "vpc-09ef0fa3f183d5b02",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:762595429056:loadbalancer/app/demo-project-alb/a199f0fdb13fe4db"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_01",
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:762595429056:listener/app/demo-project-alb/a199f0fdb13fe4db/d67ed8be9c40e2bf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:762595429056:targetgroup/demo-project-frontend-tg/16ea7aeacb139df4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:762595429056:listener/app/demo-project-alb/a199f0fdb13fe4db/d67ed8be9c40e2bf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:762595429056:loadbalancer/app/demo-project-alb/a199f0fdb13fe4db",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:762595429056:listener/app/demo-project-alb/a199f0fdb13fe4db/d67ed8be9c40e2bf"
          },
          "dependencies": [
            "aws_lb.frontend",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_01",
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:762595429056:targetgroup/demo-project-frontend-tg/16ea7aeacb139df4",
            "arn_suffix": "targetgroup/demo-project-frontend-tg/16ea7aeacb139df4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:762595429056:targetgroup/demo-project-frontend-tg/16ea7aeacb139df4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:762595429056:loadbalancer/app/demo-project-alb/a199f0fdb13fe4db"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "demo-project-frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "demo-project-frontend-tg"
            },
            "tags_all": {
              "Name": "demo-project-frontend-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09ef0fa3f183d5b02"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:762595429056:targetgroup/demo-project-frontend-tg/16ea7aeacb139df4"
          },
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:762595429056:targetgroup/demo-project-frontend-tg/16ea7aeacb139df4,i-0bddff5873a19eee2,80",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:762595429056:targetgroup/demo-project-frontend-tg/16ea7aeacb139df4",
            "target_id": "i-0bddff5873a19eee2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:762595429056:targetgroup/demo-project-frontend-tg/16ea7aeacb139df4",
            "target_id": "i-0bddff5873a19eee2"
          },
          "dependencies": [
            "aws_dynamodb_table.chat_sessions",
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.backend",
            "aws_instance.frontend",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb_sg",
            "aws_security_group.backend_sg",
            "aws_security_group.frontend_sg",
            "aws_subnet.public_subnet_01",
            "aws_vpc.demo_main_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:route-table/rtb-0bc5b531f3a6f7f71",
            "id": "rtb-0bc5b531f3a6f7f71",
            "owner_id": "762595429056",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0664ea257ac441f6b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-project-public-rt"
            },
            "tags_all": {
              "Name": "demo-project-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ef0fa3f183d5b02"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "rtb-0bc5b531f3a6f7f71",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.demo_igw",
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bcdf847a67e3ded5",
            "region": "us-east-1",
            "route_table_id": "rtb-0bc5b531f3a6f7f71",
            "subnet_id": "subnet-025140180b7246afc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "rtbassoc-0bcdf847a67e3ded5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.demo_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_01",
            "aws_vpc.demo_main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01dc90cdceef541f0",
            "region": "us-east-1",
            "route_table_id": "rtb-0bc5b531f3a6f7f71",
            "subnet_id": "subnet-0776484135e5eb1bb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "rtbassoc-01dc90cdceef541f0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.demo_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_01",
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:security-group/sg-08de2302d961ad577",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08de2302d961ad577",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP from CloudFront (com.amazonaws.global.cloudfront.origin-facing)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [
                  "pl-3b927c52"
                ],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "demo-project-alb-sg",
            "name_prefix": "",
            "owner_id": "762595429056",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-project-alb-sg"
            },
            "tags_all": {
              "Name": "demo-project-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ef0fa3f183d5b02"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "sg-08de2302d961ad577",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:security-group/sg-0ba1461912bc53568",
            "description": "Security group for backend EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ba1461912bc53568",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from frontend EC2",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-058abf85fad4a78d5"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "demo-project-backend-sg",
            "name_prefix": "",
            "owner_id": "762595429056",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-project-backend-sg"
            },
            "tags_all": {
              "Name": "demo-project-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ef0fa3f183d5b02"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "sg-0ba1461912bc53568",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.frontend_sg",
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:security-group/sg-058abf85fad4a78d5",
            "description": "Security group for frontend EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-058abf85fad4a78d5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08de2302d961ad577"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "demo-project-frontend-sg",
            "name_prefix": "",
            "owner_id": "762595429056",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-project-frontend-sg"
            },
            "tags_all": {
              "Name": "demo-project-frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ef0fa3f183d5b02"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "sg-058abf85fad4a78d5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:subnet/subnet-08ce99dfbd75c034e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ce99dfbd75c034e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "762595429056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "demo-project-pv-sub-01"
            },
            "tags_all": {
              "Name": "demo-project-pv-sub-01"
            },
            "vpc_id": "vpc-09ef0fa3f183d5b02"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "subnet-08ce99dfbd75c034e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:subnet/subnet-056923f0ef75e8152",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056923f0ef75e8152",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "762595429056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "demo-project-pv-sub-01"
            },
            "tags_all": {
              "Name": "demo-project-pv-sub-01"
            },
            "vpc_id": "vpc-09ef0fa3f183d5b02"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "subnet-056923f0ef75e8152",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:subnet/subnet-025140180b7246afc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025140180b7246afc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "762595429056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "demo-project-pb-sub-01"
            },
            "tags_all": {
              "Name": "demo-project-pb-sub-01"
            },
            "vpc_id": "vpc-09ef0fa3f183d5b02"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "subnet-025140180b7246afc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:subnet/subnet-0776484135e5eb1bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0776484135e5eb1bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "762595429056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "demo-project-pb-sub-01"
            },
            "tags_all": {
              "Name": "demo-project-pb-sub-01"
            },
            "vpc_id": "vpc-09ef0fa3f183d5b02"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "subnet-0776484135e5eb1bb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo_main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:vpc/vpc-09ef0fa3f183d5b02",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-00e51c0a66359eb67",
            "default_route_table_id": "rtb-002ab2fdca9779d39",
            "default_security_group_id": "sg-00a6efd59df8ff8dc",
            "dhcp_options_id": "dopt-015d302a35bf5e9c7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09ef0fa3f183d5b02",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-002ab2fdca9779d39",
            "owner_id": "762595429056",
            "region": "us-east-1",
            "tags": {
              "Name": "demo-project"
            },
            "tags_all": {
              "Name": "demo-project"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "vpc-09ef0fa3f183d5b02",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}